--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,22 @@
-numpy
-scikit-image
-Pillow
-scipy
-matplotlib
+contourpy==1.3.2
+cycler==0.12.1
+fonttools==4.58.0
+imageio==2.37.0
+joblib==1.5.1
+kiwisolver==1.4.8
+lazy_loader==0.4
+matplotlib==3.10.3
+networkx==3.4.2
+numpy==1.24.3
+opencv-python==4.11.0.86
+packaging==25.0
+pillow==11.2.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+PyWavelets==1.8.0
+scikit-image==0.21.0
+scikit-learn==1.6.1
+scipy==1.15.3
+six==1.17.0
+threadpoolctl==3.6.0
+tifffile==2025.5.10
